--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,16 @@
 <% provide(:title, "About") %>
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<h1>關於我們</h1>
+<p>
+  <ul>
+    <li>
+      你曾有......
+    </li>
+    <ul>
+      <li>肚子餓想訂外送卻找不到想要訂購的店家嗎？</li>
+      <li>颱風天想煮飯卻發現冰箱沒有食材可以煮嗎？</li>
+      <li>誰生日想宅配送進口洋芋片卻找不到店家嗎？</li>
+    </ul>
+    <li>八度腰網路購物平台即是為你而設計的！</li>
+  </ul>
+
+</p>
