--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,8 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home",   home_path %></li>
         <li><%= link_to "About",   about_path %></li>
+        <li><%= link_to "Items",   '#' %></li>
+        <li><%= link_to "Stores",   '#' %></li>
         <li><%= link_to "Log in", '#' %></li>
       </ul>
     </nav>
