--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,11 @@
 <% provide(:title, "Home") %>
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+
+<div class="center jumbotron">
+  <h1 font-family:'FangSong'>歡迎來到八肚夭購物平台！</h1>
+
+  <h2>
+    這是八肚夭購物平台的首頁。在此你可以在線上購買各種食品及食材，並且享受24小時內立即送達的快速服務。
+    <%= image_tag("basket.png", alt: "Food-basket Image")%>
+  </h2>
+  <%= link_to "立即註冊!", '#', class: "btn btn-lg btn-primary" %>
+</div>
