Fixed for Deployment

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2,7 +2,7 @@
 @import "bootstrap";
 
 /*Google Fonts*/
-@import url(http://fonts.googleapis.com/earlyaccess/notosanstc.css); //font-family: 'Noto Sans TC', sans-serif;
+@import url(https://fonts.googleapis.com/earlyaccess/notosanstc.css); //font-family: 'Noto Sans TC', sans-serif;
 
 /* mixins, variables, etc. */
 
