--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -4,6 +4,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@store) do |f| %>
+      <% @item = @store %>
       <%= render 'shared/error_messages' %>
 
       <%= f.label :name, "店名" %>
