--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,10 +1,10 @@
-<% if @item.errors.any? %>
+<% if item.errors.any? %>
   <div id="error_explanation">
     <div class="alert alert-danger">
-      The form contains <%= pluralize(@item.errors.count, "error") %>.
+      The form contains <%= pluralize(item.errors.count, "error") %>.
     </div>
     <ul>
-    <% @item.errors.full_messages.each do |msg| %>
+    <% item.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
     <% end %>
     </ul>
