--- a/app/views/stores/_form.html.erb
+++ b/app/views/stores/_form.html.erb
@@ -16,8 +16,16 @@
   <%= f.label :description, "詳細介紹 (可不填)" %>
   <%= f.text_area :description, size: "60x8", class: 'form-control' %>
 
-  <%= f.label :image, "店舖照片"  %>
+  <%= f.label :image, "店舖照片 (可不填)"  %>
   <%= f.file_field :image, class: 'form-control'  %>
+  <%= f.hidden_field :image_cache %>
+  <% if f.object.image? %>
+    <%= image_tag f.object.image.url %>
+    <%= f.label :remove_image, class: 'checkbox' do %>
+       <%= f.check_box :remove_image %>
+       Remove Image
+    <% end %>
+  <% end %>
 
   <%= f.submit "確認送出", class: "btn btn-primary" %>
 <% end %>
