--- a/app/views/owner/stores/_form.html.erb
+++ b/app/views/owner/stores/_form.html.erb
@@ -20,7 +20,7 @@
   <%= f.file_field :image, class: 'form-control'  %>
   <%= f.hidden_field :image_cache %>
   <% if f.object.image? %>
-    <%= image_tag f.object.image.url %>
+    <%= image_tag f.object.image.thumb.url %>
     <%= f.label :remove_image, class: 'checkbox' do %>
        <%= f.check_box :remove_image %>
        Remove Image
