--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,2 +1,12 @@
 <h1>Stores#show</h1>
 <p>Find me in app/views/stores/show.html.erb</p>
+
+<div class = "item"><%= @store.id %></div>
+<div class = "item"><%= @store.name %></div>
+<div class = "item"><%= @store.email %></div>
+<div class = "item"><%= @store.phone %></div>
+<div class = "item"><%= @store.description %></div>
+<div><%= image_tag(@store.image.url, alt: @store.name) %></div>
+
+
+<p>Find me in app/views/stores/show.html.erb</p>
