--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,11 +3,28 @@
     <%= link_to "八肚夭網路購物平台", home_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home",   home_path %></li>
-        <li><%= link_to "About",   about_path %></li>
-        <li><%= link_to "Items",   items_path %></li>
-        <li><%= link_to "Stores",   stores_path %></li>
-        <li><%= link_to "Log in", '#' %></li>
+        <li><%= link_to "首頁", home_path %></li>
+        <li><%= link_to "關於我們", about_path %></li>
+        <li><%= link_to "商品列表", items_path %></li>
+        <li><%= link_to "商店", stores_path %></li>
+        <% if logged_in? %>
+          <li><%= link_to "購物車", '#' %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Hello, <%= current_user.name %> <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "會員資料編輯", edit_user_path(current_user) %></li>
+              <li><%= link_to "消費歷史紀錄", '#' %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to "登出", logout_path, method: "delete" %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to "會員登入", login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
