--- a/app/views/items/catalog.html.erb
+++ b/app/views/items/catalog.html.erb
@@ -1,4 +1,29 @@
 <% provide(:title, "所有商品") %>
+<h1>商品列表</h1>
 
+<div class="row">
+  <div class="col-xs-8 col-xs-offset-2">
+    <% @items.each do |item| %>
+      <div class="well">
+        <div class="row">
+          <div class="col-xs-8">
+            <h4><%= item.name %></small></h4>
+          </div>
 
-<%= render 'list', items: @items %>
+          <div class="col-xs-4">
+            <%= form_for @order_item, remote: true do |f| %>
+            <h4 class="text-right">單價: NT<span style="color: green"><%= number_to_currency item.price %></span></h4>
+              <div class="input-group">
+                <%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %>
+                <div class="input-group-btn">
+                  <%= f.hidden_field :item_id, value: item.id %>
+                  <%= f.submit "加入購物車", class: "btn btn-primary" %>
+                </div>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
