--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <li><%= link_to "商品列表", items_path %></li>
         <li><%= link_to "商店", stores_path %></li>
         <% if logged_in? %>
-          <li><%= link_to "購物車", '#' %></li>
+          <li class="cart-text"><%= render 'layouts/cart_text' %></li>          
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Hello, <%= current_user.name %> <b class="caret"></b>
