--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,10 +1,10 @@
-<% provide(:title, "商品修改") %>
-<h1>商品修改</h1>
+<% provide(:title, "活動修改") %>
+<h1>活動修改</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for [:owner, @item] do |f| %>
-      <%= render 'form', item: @item, f:f %>
+    <%= form_for @event_code, url: event_path(@event.id) do |f| %>
+      <%= render 'form', event_code: @event_code, f:f%>
     <% end %>
   </div>
 </div>
