--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,10 +1,11 @@
-<% provide(:title, "新增商品") %>
-<h1>新增商品</h1>
+<% provide(:title, "新增活動") %>
+<h1>新增活動</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for [:owner,@store, @item] do |f| %>
-      <%= render 'form', item: @item, f:f %>
+    <%= form_for @event_code, url: events_path do |f| %>
+      <%= render 'form', event_code: @event_code, f:f%>
     <% end %>
+
   </div>
 </div>
