--- a/app/views/carts/_cart_row.html.erb
+++ b/app/views/carts/_cart_row.html.erb
@@ -1,6 +1,6 @@
 <div class="well">
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-5">
       <h4><%= item.name %></h4>
     </div>
 
@@ -10,14 +10,8 @@
       </div>
 
       <div class="col-md-1">
-        <%= f.number_field :quantity, value: order_item.quantity.to_i, class: "form-control", min: 1 %>
+        <%= f.select :quantity, options_for_select(1..20, order_item.quantity.to_i), {}, :onchange => "$(this.form).submit();", class: "form-control" %>
         <%= f.hidden_field :item_id, value: item.id %>
-      </div>
-
-      <div class="col-md-1">
-        <div class="btn-group">
-          <%= f.submit "更新數量", class: "btn btn-primary" %>
-        </div>
       </div>
 
       <div class="col-md-1">
