--- a/app/views/items/catalog.html.erb
+++ b/app/views/items/catalog.html.erb
@@ -14,7 +14,7 @@
             <%= form_for @order_item, remote: true do |f| %>
             <h4 class="text-right">單價: NT<span style="color: green"><%= number_to_currency item.price %></span></h4>
               <div class="input-group">
-                <%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %>
+                <%= f.select :quantity, options_for_select(1..20), {}, class: "form-control" %>
                 <div class="input-group-btn">
                   <%= f.hidden_field :item_id, value: item.id %>
                   <%= f.submit "加入購物車", class: "btn btn-primary" %>
