--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -10,7 +10,13 @@
   <% end %>
 
   <% if params[:type] == "shipping" %>
-   <%= render 'shipping', event_code: event_code, f:f %>
+    <%= f.label :minimum_spending, "最低消費" %>
+    <%= f.number_field :minimum_spending, class: 'form-control' %>
+
+    <%= f.label :discount, "運費折扣 (？％ off)" %>
+    <%= f.number_field :discount, class: 'form-control' %>
+
+    <%= hidden_field_tag "type", "shipping" %>
   <% elsif params[:type] == "season" %>
    <%= render 'season', event_code: event_code, f:f %>
   <% else %>
