--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,29 @@
-<% provide(:title, @store.name+"的商品") %>
-<h1><%=@store.name%></h1>
+<% provide(:title, "優惠活動") %>
 
-<%= render 'list', items: @items %>
+<div class="row">
+<div class="col-md-2">
+</div>
+
+<div class="col-md-8">
+  <table class="table table-striped">
+    <h1>優惠活動列表</h1>
+    <tbody>
+      <% @events.reload %>
+      <% @events.each do |event| %>
+        <tr>
+          <td><div class = "item"><%= event.id %></div></td>
+          <td><div class = "item"><%= event.event_code_type %></div></td>
+          <td><div class = "item"><%= link_to event.name, event_path(event)  %></div></td>
+          <td><div class = "item"><%= link_to 'Edit', edit_event_path(event) %></div></td>
+          <td><div class = "item"><%= link_to 'Destroy', event_path(event), method: :delete, data: { confirm: 'Are you sure?' } %></div></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <div class = "center">
+    <%= will_paginate @events, renderer: BootstrapPagination::Rails %>
+  </div>
+</div>
+<div class="col-md-2">
+</div>
+</div>
