--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -21,6 +21,9 @@
 
   <% elsif params[:type] == "season" %>
 
+    <%= f.label :store_id, "優惠store" %>
+    <%= f.select(:store_id,  Store.all.collect {|p| [ p.name, p.id ] }, {prompt: '----Select Store----'}) %>
+
     <%= f.label :discount, "全館折扣 (？％ off)" %>
     <%= f.number_field :discount, class: 'form-control' %>
 
@@ -29,6 +32,7 @@
 
     <%= f.label :end_date, "優惠結束時間" %>
     <%= f.datetime_field :end_date, class: 'form-control' %>
+
 
     <%= hidden_field_tag "type", "season" %>
 
