--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,11 @@
     <%= render 'layouts/header' %>
     <div class="container">
       <% flash.each do |message_type, message| %>
-        <div class="alert alert-<%= message_type %>"><%= message %></div>
+        <% if message.is_a?(String)%>
+          <div class="alert alert-<%= message_type %>"><%= message %></div>
+        <% else %>
+          <div class="alert alert-<%= message_type %>"><%= message.join("<br/><br/>").html_safe %></div>
+        <% end %>
       <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
