--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,5 +11,6 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_tree .
+ *= require multi-select
  *= require_self
  */
