--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,5 +12,8 @@
  *
  *= require_tree .
  *= require multi-select
+ *= require jquery.tagit
+ *= require tagit.ui-zendesk
+ *= require jquery-ui
  *= require_self
  */
