--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <li><%= link_to "商品列表", items_path %></li>
         <li><%= link_to "商店", stores_path %></li>
         <% if logged_in? %>
-          <li class="cart-text"><%= render 'layouts/cart_text' %></li>          
+          <li class="cart-text"><%= render 'layouts/cart_text' %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Hello, <%= current_user.name %> <b class="caret"></b>
@@ -17,6 +17,10 @@
               <li><%= link_to "會員資料編輯", edit_user_path(current_user) %></li>
               <li><%= link_to "消費歷史紀錄", '#' %></li>
               <li class="divider"></li>
+              <% if current_user.is_admin %>
+                <li><%= link_to "會員列表檢視", admin_users_path %></li>
+                <li class="divider"></li>
+              <% end %>
               <li>
                 <%= link_to "登出", logout_path, method: "delete" %>
               </li>
