implement order confirmation, submission

--- a/app/views/carts/_shopping_cart.html.erb
+++ b/app/views/carts/_shopping_cart.html.erb
@@ -21,6 +21,7 @@
         <%= render 'carts/cart_row', item: order_item.item, order_item: order_item, show_total: true %>
       <% end %>
       <%= render 'carts/total_price_row' %>
+      <%= render 'carts/cart_button_row' %>
     <% end %>
   </div>
 </div>
