--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -2,7 +2,7 @@
 <h1>會員訂單管理</h1>
 
 <div class="row">
-  <div class="col-md-8 col-md-offset-2">
+  <div class="col-md-10 col-md-offset-1">
     <table class="table table-striped">
       <tbody>
         <td><div class = "item">訂購日期</div></td>
@@ -10,6 +10,8 @@
         <td><div class = "item">會員編號</div></td>
         <td><div class = "item">處理進度</div></td>
         <td><div class = "item">訂單金額</div></td>
+        <td><div class = "item">訂單地址</div></td>
+        <td><div class = "item">訂單資料檢視</div></td>
         <% @orders.reload %>
         <% @orders.each do |order| %>
           <tr>
@@ -18,6 +20,8 @@
             <td><div class = "item"><%= order.user_id %></div></td>
             <td><div class = "item"><%= order_status(order) %></div></td>
             <td><div class = "item"><%= order.total_price %></div></td>
+            <td><div class = "item"><%= order.user.address %></div></td>
+            <td><div class = "item"><%= link_to "檢視", admin_order_path(order.id) %></div></td>
           </tr>
         <% end %>
       </tbody>
