--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, "會員列表") %>
-<h1>會員列表</h1>
+<% provide(:title, "會員列表檢視") %>
+<h1>會員列表檢視</h1>
 
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
