--- a/app/views/orders/_order_row.html.erb
+++ b/app/views/orders/_order_row.html.erb
@@ -1,11 +1,13 @@
 <div class="row">
-  <div class="col-md-8 col-md-offset-2">
+  <div class="col-md-10 col-md-offset-1">
     <table class="table table-striped">
       <tbody>
         <td><div class = "item">訂購日期</div></td>
         <td><div class = "item">訂單編號</div></td>
         <td><div class = "item">處理進度</div></td>
         <td><div class = "item">訂單金額</div></td>
+        <td><div class = "item">訂單地址</div></td>
+        <td><div class = "item">訂單資料檢視</div></td>
         <% @orders.reload %>
         <% @orders.each do |order| %>
           <tr>
@@ -13,6 +15,8 @@
             <td><div class = "item"><%= order.id %></div></td>
             <td><div class = "item"><%= order_status(order) %></div></td>
             <td><div class = "item"><%= order.total_price %></div></td>
+            <td><div class = "item"><%= order.user.address %></div></td>
+            <td><div class = "item"><%= link_to "檢視", user_order_path(current_user.id, order.id) %></div></td>
           </tr>
         <% end %>
       </tbody>
