--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -2,10 +2,11 @@
 <h1>會員列表</h1>
 
 <div class="row">
-  <div class="col-md-8 col-md-offset-2">
+  <div class="col-md-10 col-md-offset-1">
     <table class="table table-striped">
       <tbody>
         <td><div class = "item">會員編號</div></td>
+        <td><div class = "item">會員姓名</div></td>
         <td><div class = "item">電子郵件帳號</div></td>
         <td><div class = "item">商店擁有者: </div></td>
         <td><div class = "item">系統管理員: </div></td>
@@ -14,6 +15,7 @@
         <% @users.each do |user| %>
           <tr>
             <td><div class = "item"><%= user.id %></div></td>
+            <td><div class = "item"><%= user.name %></div></td>
             <td><div class = "item"><%= user.email %></div></td>
             <td><div class = "item"><%= user.is_owner %></div></td>
             <td><div class = "item">
