Store Association with User Authentication

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,7 +1,15 @@
 <% provide(:title, "商店") %>
-<h1>商店</h1>
 
 
+<div class="row">
+  <h1>商店列表</h1>
+  <div class="col-md-4">
+  </div>
+<div class="col-md-4">
+    <a class="btn btn-primary btn-block" href="owner/stores/new" role="button">新增商店</a>
+</div>
+</div>
+<br></br>
 <div class="row">
 <div class="col-md-2">
 </div>
