--- a/app/views/items/_list.html.erb
+++ b/app/views/items/_list.html.erb
@@ -1,32 +1,46 @@
 
 <div class="row">
-<div class="col-md-2">
+<div class="col-md-1">
 </div>
 <%@order_item = current_order.order_items.new%>
-<div class="col-md-8">
+<div class="col-md-10">
   <table class="table table-striped">
-    <h1>商品列表</h1>
+    <h1><%= !defined?(text) ? "" : text%>商品列表</h1>
     <tbody>
+      <tr>
+        <td><div class = "item">商品圖示</div></td>
+        <td><div class = "item">商品名稱</div></td>
+        <td><div class = "item">熱門標籤</div></td>
+        <td><div class = "item">商品單價</div></td>
+        <td colspan="2"><div class = "item">動作<div></td>
+      </tr>
       <% items.reload %>
       <% items.each do |item| %>
-
+        <% store = item.store%>
         <tr>
           <td><div class = "item"><%= image_tag(item.image.thumb.url, alt: item.name, class: "gravatar") %></div></td>
           <td><div class = "item"><%= link_to item.name, owner_item_path(item) %></div></td>
-          <td><div class = "item">單價: NT<span style="color: green"><%= number_to_currency item.price %></span></h4></div></td>
-          <td><div class = "item">
-          <%= form_for @order_item, remote: true do |f| %>
-            <div class="input-group">
-              <% max = item.quantity < 20 ? item.quantity : 20 %>
-              <%= f.select :quantity, options_for_select(0..max), {}, class: "form-control" %>
-              <div class="input-group-btn">
-                <%= f.hidden_field :item_id, value: item.id %>
-                <%= f.submit "加入購物車", class: "btn btn-primary", data: { confirm: "你確定要將#{item.name}置入購物車嗎？"}  %>
+          <% item_tags = item.tags.sort{|a,b| a.taggings_count <=> b.taggings_count} %>
+          <% num = (item.tags.count < 3) ? item.tags.count : 3 %>
+          <td class = "list"><%= render 'tags/list', tags: item_tags.first(num)%></td>
+          <%  if  !current_user.nil? &&( current_user.is_admin || current_user == store.owner || current_user.stores.include?(store)) %>
+            <td><div class = "item">單價: NT<span style="color: green"><%= number_to_currency item.price %></span></h4></div></td>
+            <td><div class = "item"><%= link_to '編輯', edit_owner_item_path(item) %></div></td>
+            <td><div class = "item"><%= link_to '刪除', owner_item_path(item), method: :delete, data: { confirm: 'Are you sure?' } %></div></td>
+          <% else %>
+            <td><div class = "item">單價: NT<span style="color: green"><%= number_to_currency item.price %></span></h4></div></td>
+            <td colspan = '2'><div>
+            <%= form_for @order_item, remote: true do |f| %>
+              <div class="input-group">
+                <% max = item.quantity < 20 ? item.quantity : 20 %>
+                <%= f.select :quantity, options_for_select(0..max), {}, class: "form-control" %>
+                <div class="input-group-btn">
+                  <%= f.hidden_field :item_id, value: item.id %>
+                  <%= f.submit "加入購物車", class: "btn btn-primary", data: { confirm: "你確定要將#{item.name}置入購物車嗎？"}  %>
+                </div>
               </div>
-            </div>
-          <% end %></td>
-          <td><div class = "item"><%= link_to 'Edit', edit_owner_item_path(item) %></div></td>
-          <td><div class = "item"><%= link_to 'Destroy', owner_item_path(item), method: :delete, data: { confirm: 'Are you sure?' } %></div></td>
+            <% end %></td>
+          <% end %>
         </tr>
       <% end %>
     </tbody>
