--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,7 +1,9 @@
 <% provide(:title, "所有標籤") %>
 <h1>所有標籤</h1>
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-md-7 col-md-offset-2">
     <%= render 'list', tags: @tags %>
+  </div>
+  <div class="col-md-3">
   </div>
 </div>
