--- a/app/views/owner/events/edit.html.erb
+++ b/app/views/owner/events/edit.html.erb
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for @event_code, url: owner_event_path(@event.id) do |f| %>
+    <%= form_for @event_code, url: owner_event_path(@event.id), html: { class: "myForm" } do |f| %>
       <%= render 'form', event_code: @event_code, f:f%>
     <% end %>
   </div>
