--- a/app/views/carts/_total_price_row.html.erb
+++ b/app/views/carts/_total_price_row.html.erb
@@ -6,6 +6,13 @@
           <span style="font-size: 1.2em">商品合計: NT<span style="color: green"><%= number_to_currency current_order.total_price %></span></span>
         </div>
       </li>
+      <!-- This is a comment
+      <li class="list-group-item">
+        <div class="text-right">
+          <span style="font-size: 1.2em">運費: NT<% if current_order.shipping_fee == current_order.fee %><span style="color: green"><%= number_to_currency current_order.shipping_fee %><%else%><span style="color: red"><%= number_to_currency current_order.fee %><%end%></span></span>
+        </div>
+      </li>
+       -->
       <li class="list-group-item">
         <div class="text-right">
           <span style="font-size: 1.2em">總價: NT<span style="color: green"><%= number_to_currency current_order.total_price %></span></span>
