--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,9 +1,5 @@
-<h1>Tag#show</h1>
-<p>Find me in app/views/item/show.html.erb</p>
+<% provide(:title,@tag) %>
 
 <div>
-  <%= render 'items/list', items: @item %>
+  <%= render 'items/list', items: @item, text: "含有'" + @tag + "'標籤的"%>
 </div>
-
-
-<p>Find me in app/views/item/show.html.erb</p>
