--- a/app/views/owner/stores/_form.html.erb
+++ b/app/views/owner/stores/_form.html.erb
@@ -36,11 +36,11 @@
     <% user_options.sort! %>
   <% end%>
   <% selected_options = store.user_ids %>
-  <% selected_options << store.owner.id %>
+  <% selected_options << store.owner_id %>
   <% selected_options << current_user.id %>
   <% selected_options.uniq! %>
   <%= f.label :user_ids, "員工" %>
-  <%= f.select(:user_ids, options_for_select(user_options, selected: selected_options, disabled: store.owner.id), {}, :multiple => true, id: 'optgroup') %>
+  <%= f.select(:user_ids, options_for_select(user_options, selected: selected_options, disabled: store.owner_id), {}, :multiple => true, id: 'optgroup') %>
 
   <%= f.submit "確認送出", class: "btn btn-primary" %>
 <% end %>
